# fastapi-mongo-setup

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
scratch/: fix_and_upgrade.py  fix_symbols.py
src/mongo_setup/: __init__.py  cli.py
