[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-mongo-setup"
version = "0.8.2"
description = "A CLI tool to auto-generate MongoDB connection boilerplates for FastAPI projects."
authors = [
    {name = "Souvik", email = "wbjee.souvik@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "motor",
    "python-dotenv",
    "fastapi",
    "pydantic-settings",
    "rich"
]

[project.urls]
Homepage = "https://github.com/Souvik6222/fastapi-mongo-setup"
Issues = "https://github.com/Souvik6222/fastapi-mongo-setup/issues"

[project.scripts]
mongo-setup = "mongo_setup.cli:init"

[tool.setuptools.packages.find]
where = ["src"]
